--- a/animationLogo.html
+++ b/animationLogo.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
-        <div></div>
+        <div> <link rel="image" type="image/jpeg" href="./Images/1669985139745.jpeg">
+        </div>
     </body>
 </html>
