delete image link

--- a/animationLogo.html
+++ b/animationLogo.html
@@ -7,7 +7,6 @@
     </head>
 
     <body>
-        <div> <link rel="image" type="image/jpeg" href="./Images/1669985139745.jpeg">
-        </div>
+        <div></div>
     </body>
 </html>
