--- a/animationLogo.html
+++ b/animationLogo.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <div> <img src="./Images/1669985139745.jpeg"></div>
+        <div> <img src="./Images/download (1).png" width="300px" height="300px"></div>
     </body>
 </html>
